[gd_scene load_steps=14 format=3 uid="uid://cwiickfe2ytul"]

[ext_resource type="Script" path="res://godot/gamemodes/gamemode_room/scene.gd" id="1_strqb"]
[ext_resource type="Script" path="res://godot/gamemodes/gamemode_room/hintcoin.gd" id="2_awlbe"]
[ext_resource type="Script" path="res://godot/gamemodes/gamemode_room/anim_root.gd" id="3_1wnd1"]
[ext_resource type="Script" path="res://godot/gamemodes/gamemode_room/tobj.gd" id="4_jl62s"]
[ext_resource type="Script" path="res://godot/scripts/madhatter_to_native/node_lt2_anim_deferred.gd" id="5_dhytq"]
[ext_resource type="FontFile" uid="uid://bx8sc11gtqwy" path="res://font/Roboto-Regular.ttf" id="6_fkyq0"]
[ext_resource type="Script" path="res://godot/gamemodes/gamemode_room/hud_ts.gd" id="7_604xf"]
[ext_resource type="Script" path="res://godot/gamemodes/gamemode_room/hud_bs.gd" id="8_luccn"]
[ext_resource type="Script" path="res://godot/scripts/madhatter_to_native/node_lt2_anim_button_deferred.gd" id="9_cevq6"]
[ext_resource type="Script" path="res://godot/gamemodes/gamemode_room/tobj_control.gd" id="10_iw2ul"]
[ext_resource type="Script" path="res://godot/scripts/helper/helper_alpha_fade_target.gd" id="11_by4mt"]

[sub_resource type="FontVariation" id="FontVariation_vgmtm"]
base_font = ExtResource("6_fkyq0")
variation_embolden = 0.25

[sub_resource type="LabelSettings" id="LabelSettings_pbh6t"]
line_spacing = 6.0
font = SubResource("FontVariation_vgmtm")
font_size = 31
font_color = Color(0, 0, 0, 1)
outline_color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="gamemode_room" type="Node2D"]
script = ExtResource("1_strqb")

[node name="hintcoin" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_awlbe")
path_animation = "map/hintcoin.spr"

[node name="anim_root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_1wnd1")

[node name="tobj_old" type="Control" parent="."]
visible = false
y_sort_enabled = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_jl62s")

[node name="tobj_window" type="Control" parent="tobj_old"]
y_sort_enabled = true
anchors_preset = 0
script = ExtResource("5_dhytq")
path_animation = "tobj/window.spr"

[node name="icon" type="Control" parent="tobj_old/tobj_window"]
y_sort_enabled = true
anchors_preset = 0
script = ExtResource("5_dhytq")
path_animation = "tobj/icon.spr"

[node name="cursor_wait" type="Control" parent="tobj_old/tobj_window"]
y_sort_enabled = true
anchors_preset = 0
script = ExtResource("5_dhytq")
path_animation = "cursor_wait.spr"

[node name="text" type="Label" parent="tobj_old/tobj_window"]
z_index = 1
y_sort_enabled = true
layout_mode = 0
offset_right = 303.0
offset_bottom = 43.0
text = "You found a hint coin!"
label_settings = SubResource("LabelSettings_pbh6t")
vertical_alignment = 1

[node name="hud_ts" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_604xf")

[node name="mapicon" type="Control" parent="hud_ts"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_dhytq")
path_animation = "map/mapicon.sbj"

[node name="map_place" type="Control" parent="hud_ts"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_dhytq")
path_animation = "map/map_place.spr"

[node name="text_place" type="Label" parent="hud_ts/map_place"]
z_index = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "debug"
label_settings = SubResource("LabelSettings_pbh6t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="map_purpose" type="Control" parent="hud_ts"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_dhytq")
path_animation = "map/map_purpose.spr"

[node name="text_purpose" type="Label" parent="hud_ts/map_purpose"]
z_index = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "hello world"
label_settings = SubResource("LabelSettings_pbh6t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="toketa_nazo" type="Control" parent="hud_ts"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_dhytq")
path_animation = "map/toketa_nazo.sbj"

[node name="hud_bs" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_luccn")

[node name="movemode" type="Control" parent="hud_bs"]
anchors_preset = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 104.0
offset_bottom = 104.0
script = ExtResource("9_cevq6")
path_animation = "map/movemode.spr"
name_anim_click = "click"
one_shot = true

[node name="tobj_control" type="Control" parent="hud_bs"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_iw2ul")

[node name="CanvasGroup" type="CanvasGroup" parent="hud_bs/tobj_control"]

[node name="CanvasFadeController" type="Node2D" parent="hud_bs/tobj_control/CanvasGroup"]
script = ExtResource("11_by4mt")

[node name="text" type="Label" parent="hud_bs/tobj_control/CanvasGroup"]
z_index = 1
offset_right = 40.0
offset_bottom = 23.0
text = "hello world"
